--- a/answers/profiles.yml
+++ b/answers/profiles.yml
@@ -6,8 +6,8 @@ answers: # this needs to match the profile: in your dbt_project.yml file
       method: oauth
       # To use this, first run (in your terminal): export BIGQUERY_PROJECT="your_project_name"
       # Then dbt will recognise the variable
-      database: "{{ env_var('BIGQUERY_PROJECT') }}"
-      schema: dbt_test # Replace this with dbt_your_name, e.g. dbt_bob
+      database: "ornate-woodland-380520"
+      schema: dbt_rohit # Replace this with dbt_your_name, e.g. dbt_bob
       threads: 64 # Max number of concurrent things running at once
       timeout_seconds: 300
       location: US
@@ -17,8 +17,8 @@ answers: # this needs to match the profile: in your dbt_project.yml file
     production:
       type: bigquery
       method: oauth
-      database: "{{ env_var('BIGQUERY_PROJECT') }}"
-      schema: dbt_production
+      database: "ornate-woodland-380520"
+      schema: dbt_rohit
       threads: 64
       timeout_seconds: 300
       location: US
